// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ThreadSummaryView > renders a decryption failure preview 1`] = `
<div>
  <button
    aria-label="Open thread"
    class="ThreadSummary-module_threadSummary"
    type="button"
  >
    <div
      class="_indicator-icon_147l5_17 ThreadSummary-module_threadIcon"
      style="--cpd-icon-button-size: 24px;"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 3h16a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H6l-2.293 2.293c-.63.63-1.707.184-1.707-.707V5a2 2 0 0 1 2-2m3 7h10q.424 0 .712-.287A.97.97 0 0 0 18 9a.97.97 0 0 0-.288-.713A.97.97 0 0 0 17 8H7a.97.97 0 0 0-.713.287A.97.97 0 0 0 6 9q0 .424.287.713Q6.576 10 7 10m0 4h6q.424 0 .713-.287A.97.97 0 0 0 14 13a.97.97 0 0 0-.287-.713A.97.97 0 0 0 13 12H7a.97.97 0 0 0-.713.287A.97.97 0 0 0 6 13q0 .424.287.713Q6.576 14 7 14"
        />
      </svg>
    </div>
    <span
      class="ThreadSummary-module_repliesAmount"
    >
      3 replies
    </span>
    <span
      aria-label="User avatar"
      class="_avatar_va14e_8 ThreadSummary-module_avatar _avatar-imageless_va14e_55"
      data-color="3"
      data-type="round"
      role="img"
      style="--cpd-avatar-size: 24px;"
    >
      A
    </span>
    <div
      class="ThreadSummary-module_sender"
    >
      Alice
    </div>
    <span
      class="ThreadSummary-module_content"
    >
      Unable to decrypt message
    </span>
    <div
      class="ThreadSummary-module_chevron"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.7 17.3a.95.95 0 0 1-.275-.7q0-.425.275-.7l3.9-3.9-3.9-3.9a.95.95 0 0 1-.275-.7q0-.425.275-.7a.95.95 0 0 1 .7-.275q.425 0 .7.275l4.6 4.6q.15.15.213.325.062.175.062.375t-.062.375a.9.9 0 0 1-.213.325l-4.6 4.6a.95.95 0 0 1-.7.275.95.95 0 0 1-.7-.275"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`ThreadSummaryView > renders a notification indicator 1`] = `
<div>
  <button
    aria-label="Open thread"
    class="ThreadSummary-module_threadSummary"
    type="button"
  >
    <div
      class="_indicator-icon_147l5_17 ThreadSummary-module_threadIcon"
      data-indicator="critical"
      style="--cpd-icon-button-size: 24px;"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 3h16a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H6l-2.293 2.293c-.63.63-1.707.184-1.707-.707V5a2 2 0 0 1 2-2m3 7h10q.424 0 .712-.287A.97.97 0 0 0 18 9a.97.97 0 0 0-.288-.713A.97.97 0 0 0 17 8H7a.97.97 0 0 0-.713.287A.97.97 0 0 0 6 9q0 .424.287.713Q6.576 10 7 10m0 4h6q.424 0 .713-.287A.97.97 0 0 0 14 13a.97.97 0 0 0-.287-.713A.97.97 0 0 0 13 12H7a.97.97 0 0 0-.713.287A.97.97 0 0 0 6 13q0 .424.287.713Q6.576 14 7 14"
        />
      </svg>
    </div>
    <span
      class="ThreadSummary-module_repliesAmount"
    >
      3 replies
    </span>
    <span
      aria-label="User avatar"
      class="_avatar_va14e_8 ThreadSummary-module_avatar _avatar-imageless_va14e_55"
      data-color="3"
      data-type="round"
      role="img"
      style="--cpd-avatar-size: 24px;"
    >
      A
    </span>
    <div
      class="ThreadSummary-module_sender"
    >
      Alice
    </div>
    <span
      class="ThreadSummary-module_content"
    >
      Can you review the draft?
    </span>
    <div
      class="ThreadSummary-module_chevron"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.7 17.3a.95.95 0 0 1-.275-.7q0-.425.275-.7l3.9-3.9-3.9-3.9a.95.95 0 0 1-.275-.7q0-.425.275-.7a.95.95 0 0 1 .7-.275q.425 0 .7.275l4.6 4.6q.15.15.213.325.062.175.062.375t-.062.375a.9.9 0 0 1-.213.325l-4.6 4.6a.95.95 0 0 1-.7.275.95.95 0 0 1-.7-.275"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`ThreadSummaryView > renders the default thread summary 1`] = `
<div>
  <button
    aria-label="Open thread"
    class="ThreadSummary-module_threadSummary"
    type="button"
  >
    <div
      class="_indicator-icon_147l5_17 ThreadSummary-module_threadIcon"
      style="--cpd-icon-button-size: 24px;"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 3h16a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H6l-2.293 2.293c-.63.63-1.707.184-1.707-.707V5a2 2 0 0 1 2-2m3 7h10q.424 0 .712-.287A.97.97 0 0 0 18 9a.97.97 0 0 0-.288-.713A.97.97 0 0 0 17 8H7a.97.97 0 0 0-.713.287A.97.97 0 0 0 6 9q0 .424.287.713Q6.576 10 7 10m0 4h6q.424 0 .713-.287A.97.97 0 0 0 14 13a.97.97 0 0 0-.287-.713A.97.97 0 0 0 13 12H7a.97.97 0 0 0-.713.287A.97.97 0 0 0 6 13q0 .424.287.713Q6.576 14 7 14"
        />
      </svg>
    </div>
    <span
      class="ThreadSummary-module_repliesAmount"
    >
      3 replies
    </span>
    <span
      aria-label="User avatar"
      class="_avatar_va14e_8 ThreadSummary-module_avatar _avatar-imageless_va14e_55"
      data-color="3"
      data-type="round"
      role="img"
      style="--cpd-avatar-size: 24px;"
    >
      A
    </span>
    <div
      class="ThreadSummary-module_sender"
    >
      Alice
    </div>
    <span
      class="ThreadSummary-module_content"
    >
      Can you review the draft?
    </span>
    <div
      class="ThreadSummary-module_chevron"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.7 17.3a.95.95 0 0 1-.275-.7q0-.425.275-.7l3.9-3.9-3.9-3.9a.95.95 0 0 1-.275-.7q0-.425.275-.7a.95.95 0 0 1 .7-.275q.425 0 .7.275l4.6 4.6q.15.15.213.325.062.175.062.375t-.062.375a.9.9 0 0 1-.213.325l-4.6 4.6a.95.95 0 0 1-.7.275.95.95 0 0 1-.7-.275"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`ThreadSummaryView > renders the narrow thread summary 1`] = `
<div>
  <button
    aria-label="Open thread"
    class="ThreadSummary-module_threadSummary ThreadSummary-module_narrow"
    type="button"
  >
    <div
      class="_indicator-icon_147l5_17 ThreadSummary-module_threadIcon"
      style="--cpd-icon-button-size: 24px;"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 3h16a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H6l-2.293 2.293c-.63.63-1.707.184-1.707-.707V5a2 2 0 0 1 2-2m3 7h10q.424 0 .712-.287A.97.97 0 0 0 18 9a.97.97 0 0 0-.288-.713A.97.97 0 0 0 17 8H7a.97.97 0 0 0-.713.287A.97.97 0 0 0 6 9q0 .424.287.713Q6.576 10 7 10m0 4h6q.424 0 .713-.287A.97.97 0 0 0 14 13a.97.97 0 0 0-.287-.713A.97.97 0 0 0 13 12H7a.97.97 0 0 0-.713.287A.97.97 0 0 0 6 13q0 .424.287.713Q6.576 14 7 14"
        />
      </svg>
    </div>
    <span
      class="ThreadSummary-module_repliesAmount"
    >
      3
    </span>
    <span
      aria-label="User avatar"
      class="_avatar_va14e_8 ThreadSummary-module_avatar _avatar-imageless_va14e_55"
      data-color="3"
      data-type="round"
      role="img"
      style="--cpd-avatar-size: 24px;"
    >
      A
    </span>
    <span
      class="ThreadSummary-module_content"
    >
      Can you review the draft?
    </span>
    <div
      class="ThreadSummary-module_chevron"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.7 17.3a.95.95 0 0 1-.275-.7q0-.425.275-.7l3.9-3.9-3.9-3.9a.95.95 0 0 1-.275-.7q0-.425.275-.7a.95.95 0 0 1 .7-.275q.425 0 .7.275l4.6 4.6q.15.15.213.325.062.175.062.375t-.062.375a.9.9 0 0 1-.213.325l-4.6 4.6a.95.95 0 0 1-.7.275.95.95 0 0 1-.7-.275"
        />
      </svg>
    </div>
  </button>
</div>
`;
